--- a/configure.ac
+++ b/configure.ac
@@ -20,7 +20,7 @@
 # Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
 
 AC_PREREQ(2.57)
-AC_INIT([pavucontrol],[0.1],[mzcnzna (at) 0pointer (dot) de])
+AC_INIT([pavucontrol],[0.8],[mzcnihpbageby (at) 0pointer (dot) de])
 AC_CONFIG_SRCDIR([src/pavucontrol.cc])
 AC_CONFIG_HEADERS([config.h])
 AM_INIT_AUTOMAKE([foreign -Wall])
@@ -79,5 +79,5 @@ fi
 
 AM_CONDITIONAL([USE_LYNX], [test "x$lynx" = xyes])
 
-AC_CONFIG_FILES([Makefile src/Makefile])dnl doc/Makefile doc/README.html])
+AC_CONFIG_FILES([Makefile src/Makefile doc/Makefile doc/README.html])
 AC_OUTPUT
