fix glade file path
git-svn-id: file:///home/lennart/svn/public/pavucontrol/trunk@8 c17c95f2-f111-0410-90bf-f30a9569010c

--- a/doc/README.html.in
+++ b/doc/README.html.in
@@ -58,7 +58,7 @@ stream seperately.</p>
 
 <h2><a name="status">Current Status</a></h2>
 
-<p>Works fine.</p>
+<p>Works perfectly.</p>
   
 <h2><a name="documentation">Documentation</a></h2>
 
