update docs for 0.9.1
git-svn-id: file:///home/lennart/svn/public/pavucontrol/trunk@24 c17c95f2-f111-0410-90bf-f30a9569010c

--- a/doc/README.html.in
+++ b/doc/README.html.in
@@ -42,6 +42,9 @@ Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.</p>
 
 <h2><a name="news">News</a></h2>
 
+<div class="news-date">Fri June 2 2006: </div> <p class="news-text"><a
+href="@PACKAGE_URL@pavucontrol-0.9.1.tar.gz">Version 0.9.1</a> released; add a <tt>.desktop</tt> file; update icons everywhere</p>
+
 <div class="news-date">Sat May 27 2006: </div> <p class="news-text"><a
 href="@PACKAGE_URL@pavucontrol-0.9.0.tar.gz">Version 0.9.0</a> released; update for Polypaudio 0.9.0; show client name of playback streams; make volume slider more responsive</p>
 
@@ -105,7 +108,7 @@ compilation and <tt>make install</tt> (as root) for installation of
 <p>If you want to be notified whenever I release a new version of this software use the subscription feature of <a href="http://freshmeat.net/projects/pavucontrol/">Freshmeat</a>.</p>
 
 <hr/>
-<address class="grey">Lennart Poettering &lt;@PACKAGE_BUGREPORT@&gt;, May 2006</address>
+<address class="grey">Lennart Poettering &lt;@PACKAGE_BUGREPORT@&gt;, June 2006</address>
 <div class="grey"><i>$Id$</i></div>
 
 </body>
