--- a/src/pavucontrol.desktop
+++ b/src/pavucontrol.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=1.0
 Encoding=UTF-8
-Name=Polypaudio Volume Control
+Name=PulseAudio Volume Control
 GenericName=Volume Control
 Comment=Adjust the volume level
 Exec=pavucontrol
