--- a/doc/README.html.in
+++ b/doc/README.html.in
@@ -42,6 +42,9 @@ Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.</p>
 
 <h2><a name="news">News</a></h2>
 
+<div class="news-date">Mon Jul 24 2006: </div> <p class="news-text"><a
+href="@PACKAGE_URL@pavucontrol-0.9.3.tar.gz">Version 0.9.3</a> released; show client names only if they are set</p>
+
 <div class="news-date">Sat Jul 8 2006: </div> <p class="news-text"><a
 href="@PACKAGE_URL@pavucontrol-0.9.2.tar.gz">Version 0.9.2</a> released; update for <a href="http://pulseaudio.org/">PulseAudio 0.9.2</a></p>
 
@@ -84,7 +87,7 @@ source code configuration.</p>
 
 <p><tt>pavucontrol</tt> requires <a href="http://gtkmm.sf.net/"><tt>gtkmm</tt></a> and <tt>glademmm</tt> installed.</p>
 
-<p>Obviously <tt>pavucontrol</tt> requires an installation of <a href="http://pulseaudio.org/">PulseAudio</a> (version 0.9.2).</p>
+<p>Obviously <tt>pavucontrol</tt> requires an installation of <a href="http://pulseaudio.org/">PulseAudio</a> (version 0.9.x).</p>
 
 <h2><a name="installation">Installation</a></h2>
 
