add fedora-snapshot target
git-svn-id: file:///home/lennart/svn/public/pavucontrol/trunk@57 c17c95f2-f111-0410-90bf-f30a9569010c

--- a/Makefile.am
+++ b/Makefile.am
@@ -35,4 +35,7 @@ homepage: all dist
 	cp doc/README.html doc/screenshot.png doc/style.css $$HOME/homepage/private/projects/pavucontrol
 	ln -sf README.html $$HOME/homepage/private/projects/pavucontrol/index.html
 
+fedora-snapshot: dist
+	cp $(distdir).tar.gz $$HOME/cvs.fedora/pavucontrol/devel/$(distdir).svn`date +%Y%m%d`.tar.gz
+
 .PHONY: homepage
