add changelog to tarball
git-svn-id: file:///home/lennart/svn/public/pavucontrol/trunk@64 c17c95f2-f111-0410-90bf-f30a9569010c

--- a/Makefile.am
+++ b/Makefile.am
@@ -39,3 +39,10 @@ fedora-snapshot: dist
 	cp $(distdir).tar.gz $$HOME/cvs.fedora/pavucontrol/devel/$(distdir).svn`date +%Y%m%d`.tar.gz
 
 .PHONY: homepage
+
+dist-hook:
+	if test -d .svn ; then \
+		svn update ; \
+		chmod u+w ${distdir}/ChangeLog || true ; \
+		svn2cl -o ${distdir}/ChangeLog ; \
+	fi
