--- a/doc/README.html.in
+++ b/doc/README.html.in
@@ -10,7 +10,7 @@
 <body>
 <h1><a name="top">PulseAudio Volume Control @PACKAGE_VERSION@</a></h1>
 
-<p><i>Copyright 2006 Lennart Poettering &lt;@PACKAGE_BUGREPORT@&gt;</i></p>
+<p><i>Copyright 2006-2007 Lennart Poettering &lt;@PACKAGE_BUGREPORT@&gt;</i></p>
 
 <ul class="toc">
     <li><a href="#license">License</a></li>
@@ -41,6 +41,10 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.</p>
 
 <h2><a name="news">News</a></h2>
+
+<div class="news-date">Tue Oct 30 2007: </div> <p class="news-text"><a
+href="@PACKAGE_URL@pavucontrol-0.9.5.tar.gz">Version 0.9.5</a>
+released; rework UI; add context menu option to kill a playback stream; add context menu option to select the default device; use prettier channel names; filter non-application streams by default; support muting streams</p>
 
 <div class="news-date">Sat Aug 26 2006: </div> <p class="news-text"><a
 href="@PACKAGE_URL@pavucontrol-0.9.4.tar.gz">Version 0.9.4</a>
@@ -76,7 +80,7 @@ playback stream seperately.</p>
 <h2><a name="status">Current Status</a></h2>
 
 <p>Works perfectly.</p>
-  
+
 <h2><a name="documentation">Documentation</a></h2>
 
 <p>There is not much to say. Just run <tt>pavucontrol</tt> and see for yourself.</p>
@@ -119,7 +123,7 @@ compilation and <tt>make install</tt> (as root) for installation of
 <p>If you want to be notified whenever I release a new version of this software use the subscription feature of <a href="http://freshmeat.net/projects/pavucontrol/">Freshmeat</a>.</p>
 
 <hr/>
-<address class="grey">Lennart Poettering &lt;@PACKAGE_BUGREPORT@&gt;, Aug 2006</address>
+<address class="grey">Lennart Poettering &lt;@PACKAGE_BUGREPORT@&gt;, Oct 2007</address>
 <div class="grey"><i>$Id$</i></div>
 
 </body>
