prepare next pavucontrol release
git-svn-id: file:///home/lennart/svn/public/pavucontrol/trunk@69 c17c95f2-f111-0410-90bf-f30a9569010c

--- a/doc/README.html.in
+++ b/doc/README.html.in
@@ -10,7 +10,7 @@
 <body>
 <h1><a name="top">PulseAudio Volume Control @PACKAGE_VERSION@</a></h1>
 
-<p><i>Copyright 2006-2007 Lennart Poettering &lt;@PACKAGE_BUGREPORT@&gt;</i></p>
+<p><i>Copyright 2006-2008 Lennart Poettering &lt;@PACKAGE_BUGREPORT@&gt;</i></p>
 
 <ul class="toc">
     <li><a href="#license">License</a></li>
@@ -41,6 +41,12 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.</p>
 
 <h2><a name="news">News</a></h2>
+
+<div class="news-date">Fri Mar 28
+2008: </div> <p class="news-text"><a href="@PACKAGE_URL@pavucontrol-0.9.6.tar.gz">Version
+0.9.6</a> released; draw radio buttons instead of check boxes when
+moving streams; fix crasher when connecting to a PA server that has no
+default sink/source configured.</p>
 
 <div class="news-date">Tue Oct 30 2007: </div> <p class="news-text"><a
 href="@PACKAGE_URL@pavucontrol-0.9.5.tar.gz">Version 0.9.5</a>
@@ -123,7 +129,7 @@ compilation and <tt>make install</tt> (as root) for installation of
 <p>If you want to be notified whenever I release a new version of this software use the subscription feature of <a href="http://freshmeat.net/projects/pavucontrol/">Freshmeat</a>.</p>
 
 <hr/>
-<address class="grey">Lennart Poettering &lt;@PACKAGE_BUGREPORT@&gt;, Oct 2007</address>
+<address class="grey">Lennart Poettering &lt;@PACKAGE_BUGREPORT@&gt;, Mar 2008</address>
 <div class="grey"><i>$Id$</i></div>
 
 </body>
