--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,18 +1,20 @@
 # This file is part of pavucontrol.
 #
-# pavucontrol is free software; you can redistribute it and/or modify it
-# under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 2 of the License, or
-# (at your option) any later version.
+# Copyright 2006-2008 Lennart Poettering
+#
+# pavucontrol is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as
+# published by the Free Software Foundation, either version 2 of the
+# License, or (at your option) any later version.
 #
 # pavucontrol is distributed in the hope that it will be useful, but
 # WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 # General Public License for more details.
 #
-# You should have received a copy of the GNU General Public License
-# along with pavucontrol; if not, write to the Free Software Foundation,
-# Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
+# You should have received a copy of the GNU General Public
+# License along with pavucontrol. If not, see
+# <http://www.gnu.org/licenses/>.
 
 noinst_DATA = README.html README
 EXTRA_DIST = $(noinst_DATA) style.css README.html.in
@@ -31,4 +33,3 @@ tidy: README.html
 	tidy -e < README.html
 
 .PHONY: tidy
-
