--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,10 @@
 # This file is part of pavucontrol.
 #
+# Copyright 2006-2008 Lennart Poettering
+#
 # pavucontrol is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 2 of the License, or
+# the Free Software Foundation, either version 2 of the License, or
 # (at your option) any later version.
 #
 # pavucontrol is distributed in the hope that it will be useful, but
@@ -11,9 +13,7 @@
 # General Public License for more details.
 #
 # You should have received a copy of the GNU General Public License
-# along with pavucontrol; if not, write to the Free Software
-# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
-# USA.
+# along with pavucontrol. If not, see <http://www.gnu.org/licenses/>.
 
 desktopdir = $(datadir)/applications
 
@@ -25,5 +25,6 @@ dist_desktop_DATA=pavucontrol.desktop
 pavucontrol_SOURCES=pavucontrol.cc
 
 pavucontrol_LDADD=$(AM_LDADD) $(GUILIBS_LIBS) $(PULSE_LIBS)
-pavucontrol_CXXFLAGS=$(AM_CXXFLAGS) $(GUILIBS_CFLAGS) $(PULSE_CFLAGS) 
-pavucontrol_CXXFLAGS+=-DGLADE_FILE=\"$(pkgdatadir)/pavucontrol.glade\"
+pavucontrol_CXXFLAGS=$(AM_CXXFLAGS) $(GUILIBS_CFLAGS) $(PULSE_CFLAGS)
+#pavucontrol_CXXFLAGS+=-DGLADE_FILE=\"$(pkgdatadir)/pavucontrol.glade\"
+pavucontrol_CXXFLAGS+=-DGLADE_FILE=\"pavucontrol.glade\"
