generate changelog from git history

--- a/Makefile.am
+++ b/Makefile.am
@@ -39,8 +39,8 @@ fedora-snapshot: dist
 .PHONY: homepage
 
 dist-hook:
-	if test -d .svn ; then \
-		svn update ; \
+	if test -d .git ; then \
+		git pull ; \
 		chmod u+w ${distdir}/ChangeLog || true ; \
-		svn2cl -o ${distdir}/ChangeLog ; \
+		git-changelog.perl > ${distdir}/ChangeLog ; \
 	fi
