--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+ABOUT-NLS
+ChangeLog
+*~
+config.guess
+config.rpath
+config.sub
+intltool-extract.in
+intltool-merge.in
+intltool-update.in
+m4/
 aclocal.m4
 *.cache
 config.h
