--- a/configure.ac
+++ b/configure.ac
@@ -78,5 +78,19 @@ fi
 
 AM_CONDITIONAL([USE_LYNX], [test "x$lynx" = xyes])
 
-AC_CONFIG_FILES([Makefile src/Makefile doc/Makefile doc/README.html])
+AM_GNU_GETTEXT([external])
+
+IT_PROG_INTLTOOL([0.35.0])
+GETTEXT_PACKAGE=pavucontrol
+AC_SUBST([GETTEXT_PACKAGE])
+AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],["$GETTEXT_PACKAGE"],[Gettext package])
+AM_GLIB_GNU_GETTEXT
+
+AC_CONFIG_FILES([
+po/Makefile.in
+Makefile
+src/Makefile
+doc/Makefile
+doc/README.html])
+
 AC_OUTPUT
