--- a/src/pavucontrol.desktop.in
+++ b/src/pavucontrol.desktop.in
@@ -1,12 +1,11 @@
 [Desktop Entry]
 Version=1.0
 Encoding=UTF-8
-Name=PulseAudio Volume Control
-GenericName=Volume Control
-Comment=Adjust the volume level
+_Name=PulseAudio Volume Control
+_GenericName=Volume Control
+_Comment=Adjust the volume level
 Exec=pavucontrol
 Icon=multimedia-volume-control
 StartupNotify=true
 Type=Application
 Categories=Application;AudioVideo;Audio;
-GenericName[en_GB]=Volume Control
