Add 'Mixer' categorization to .desktop file

--- a/src/pavucontrol.desktop.in
+++ b/src/pavucontrol.desktop.in
@@ -8,4 +8,4 @@ Exec=pavucontrol
 Icon=multimedia-volume-control
 StartupNotify=true
 Type=Application
-Categories=Application;AudioVideo;Audio;
+Categories=AudioVideo;Audio;Mixer;GTK;
