Split the minimalstreamwidget into it's own file

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,7 +24,9 @@ glade_DATA=pavucontrol.glade
 desktop_in_files=pavucontrol.desktop.in
 desktop_DATA=$(desktop_in_files:.desktop.in=.desktop)
 
-pavucontrol_SOURCES=pavucontrol.cc i18n.h
+pavucontrol_SOURCES= \
+  minimalstreamwidget.h minimalstreamwidget.cc \
+  pavucontrol.cc i18n.h
 
 pavucontrol_LDADD=$(AM_LDADD) $(GUILIBS_LIBS) $(PULSE_LIBS)
 pavucontrol_CXXFLAGS=$(AM_CXXFLAGS) $(GUILIBS_CFLAGS) $(PULSE_CFLAGS) -DLOCALEDIR=\"$(localedir)\"
