Split channelwidget into separate files. Also separate out the definition of streamwidget into it's own header

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -26,6 +26,8 @@ desktop_DATA=$(desktop_in_files:.desktop.in=.desktop)
 
 pavucontrol_SOURCES= \
   minimalstreamwidget.h minimalstreamwidget.cc \
+  channelwidget.h channelwidget.cc \
+  streamwidget.h \
   pavucontrol.cc i18n.h
 
 pavucontrol_LDADD=$(AM_LDADD) $(GUILIBS_LIBS) $(PULSE_LIBS)
