Split out streamwidget into it's own files.
Also correct the location of the argument default value specification (it should be in prototype not implementation)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,7 +27,7 @@ desktop_DATA=$(desktop_in_files:.desktop.in=.desktop)
 pavucontrol_SOURCES= \
   minimalstreamwidget.h minimalstreamwidget.cc \
   channelwidget.h channelwidget.cc \
-  streamwidget.h \
+  streamwidget.h streamwidget.cc \
   pavucontrol.cc i18n.h
 
 pavucontrol_LDADD=$(AM_LDADD) $(GUILIBS_LIBS) $(PULSE_LIBS)
