Split cardwidget out into it's own files.
Also define a get_context() method to get the context from outside of the main file.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -28,6 +28,7 @@ pavucontrol_SOURCES= \
   minimalstreamwidget.h minimalstreamwidget.cc \
   channelwidget.h channelwidget.cc \
   streamwidget.h streamwidget.cc \
+  cardwidget.h cardwidget.cc \
   pavucontrol.h pavucontrol.cc \
   i18n.h
 
