Split sinkinputwidget into it's own files.
Also had to put mainwindow into it's own header for this to work. Full conversion of mainwindow will ultimately follow.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -31,6 +31,8 @@ pavucontrol_SOURCES= \
   cardwidget.h cardwidget.cc \
   sinkwidget.h sinkwidget.cc \
   sourcewidget.h sourcewidget.cc \
+  sinkinputwidget.h sinkinputwidget.cc \
+  mainwindow.h \
   pavucontrol.h pavucontrol.cc \
   i18n.h
 
