--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,3 +2,11 @@
 src/pavucontrol.desktop.in
 src/pavucontrol.glade
 src/pavucontrol.cc
+src/cardwidget.cc
+src/channelwidget.cc
+src/mainwindow.cc
+src/rolewidget.cc
+src/sinkinputwidget.cc
+src/sinkwidget.cc
+src/sourceoutputwidget.cc
+src/sourcewidget.cc
