--- a/doc/README.html.in
+++ b/doc/README.html.in
@@ -118,7 +118,7 @@ compilation and <tt>make install</tt> (as root) for installation of
 
 <h2><a name="acks">Acknowledgements</a></h2>
 
-<p>Coling Guthrie for the card profile UI and other work</p>
+<p>Colin Guthrie for the card profile UI and other work</p>
 
 <h2><a name="download">Download</a></h2>
 
