--- a/doc/README.html.in
+++ b/doc/README.html.in
@@ -38,6 +38,10 @@ General Public License for more details.</p>
 
 <h2><a name="news">News</a></h2>
 
+<div class="news-date">Thu Sep 10
+2009: </div> <p class="news-text"><a href="@PACKAGE_URL@pavucontrol-0.9.9.tar.gz">Version
+0.9.9</a> released; allow configuring device ports; various updates.</p>
+
 <div class="news-date">Mon Apr 13
 2009: </div> <p class="news-text"><a href="@PACKAGE_URL@pavucontrol-0.9.8.tar.gz">Version
 0.9.8</a> released; allow configuring card profiles; various updates.</p>
@@ -106,7 +110,7 @@ source code configuration.</p>
 
 <p><tt>pavucontrol</tt> requires <a href="http://gtkmm.sf.net/"><tt>gtkmm</tt></a> and <tt>glademmm</tt> installed.</p>
 
-<p>Obviously <tt>pavucontrol</tt> requires an installation of <a href="http://pulseaudio.org/">PulseAudio</a> (version 0.9.15).</p>
+<p>Obviously <tt>pavucontrol</tt> requires an installation of <a href="http://pulseaudio.org/">PulseAudio</a> (version 0.9.16).</p>
 
 <h2><a name="installation">Installation</a></h2>
 
@@ -131,7 +135,7 @@ compilation and <tt>make install</tt> (as root) for installation of
 <pre>git clone git://git.0pointer.de/pavucontrol</pre>
 
 <hr/>
-<address class="grey">Lennart Poettering &lt;@PACKAGE_BUGREPORT@&gt;, April 2009</address>
+<address class="grey">Lennart Poettering &lt;@PACKAGE_BUGREPORT@&gt;, September 2009</address>
 
 </body>
 </html>
