doc: Adapt the sed expression for cleaning up links
Some lynx versions produce links of the form file:///..., others produce
file://localhost/..., so catch both forms.

Reported-by: Peter Mattern <matternp@arcor.de>
Signed-off-by: Alexander E. Patrakov <patrakov@gmail.com>

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -26,7 +26,7 @@ if USE_LYNX
 dist_doc_DATA = README
 
 README: README.html
-	lynx --dump $^ | sed 's,file://localhost/.*/doc/README.html,README,' > $@
+	lynx --dump $^ | sed 's,file://.*/doc/README.html,README,' > $@
 
 MAINTAINERCLEANFILES += README
 CLEANFILES += README
