--- a/configure.ac
+++ b/configure.ac
@@ -39,6 +39,7 @@ AC_PROG_CC
 AC_PROG_LN_S
 AC_TYPE_SIGNAL
 AC_HEADER_STDC
+AX_CXX_COMPILE_STDCXX_11
 
 AC_ARG_ENABLE(gtk3,
    [AS_HELP_STRING([--disable-gtk3],
