doc: Update link to git repository
And we no longer need to link to the git homepage either.

--- a/doc/README.html.in
+++ b/doc/README.html.in
@@ -154,9 +154,9 @@ compilation and <tt>make install</tt> (as root) for installation of
 
 <p>The current release is <a href="@PACKAGE_URL@pavucontrol-@PACKAGE_VERSION@.tar.gz">@PACKAGE_VERSION@</a></p>
 
-<p>Get <tt>pavucontrol</tt>'s development sources from the <a href="http://git-scm.org/">GIT</a> <a href="git://git.0pointer.de/pavucontrol">repository</a> (<a href="http://git.0pointer.de/?p=pavucontrol.git">gitweb</a>): </p>
+<p>Get <tt>pavucontrol</tt>'s development sources from the git <a href="git://anongit.freedesktop.org/pulseaudio/pavucontrol">repository</a> (<a href="http://cgit.freedesktop.org/pulseaudio/pavucontrol">gitweb</a>): </p>
 
-<pre>git clone git://git.0pointer.de/pavucontrol</pre>
+<pre>git clone git://anongit.freedesktop.org/pulseaudio/pavucontrol</pre>
 
 <hr/>
 <address class="grey">Lennart Poettering &lt;@PACKAGE_BUGREPORT@&gt;, October 2009</address>
