--- a/src/pavucontrol-qt.desktop.in
+++ b/src/pavucontrol-qt.desktop.in
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Version=1.0
-_Name=PulseAudio Volume Control
-_GenericName=Volume Control
-_Comment=Adjust the volume level
-Exec=pavucontrol
+Name=PulseAudio Volume Control
+GenericName=Volume Control
+Comment=Adjust the volume level
+Exec=pavucontrol-qt
 Icon=multimedia-volume-control
 StartupNotify=true
 Type=Application
