--- a/src/pavucontrol-qt.desktop.in
+++ b/src/pavucontrol-qt.desktop.in
@@ -7,4 +7,4 @@ Exec=pavucontrol-qt
 Icon=multimedia-volume-control
 StartupNotify=true
 Type=Application
-Categories=AudioVideo;Audio;Mixer;GTK;
+Categories=AudioVideo;Audio;Mixer;Qt;
