- Add a simple single instance controller to avoid run multiple simultaneous applications

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,6 +35,7 @@ set(pavucontrol-qt_SRCS
     sourceoutputwidget.cc
     sourcewidget.cc
     streamwidget.cc
+    uniqueapplication.cc
 )
 
 set(pavucontrol-qt_UI
